using display ruby to prevent words of wraping on new line

--- a/client/src/app/shared/generic-form/generic-form.component.scss
+++ b/client/src/app/shared/generic-form/generic-form.component.scss
@@ -277,6 +277,7 @@
         border-radius: 9px;
         padding: 0.5rem 0.7rem;
         margin-left: auto;
+        display: ruby;
       }
 
       &::before {
